# laboratory_work_16

./: CMakeLists.txt  eighteenth_task.c  eighth_task.c  eleventh16_task.c  eleventh_task.c  fifteenth_task.c  fifth_task.c  first_task.c  fourteenth_task.c  fourth_task.c  main.c  nineteenth_task.c  ninth_task.c  second_task.c  seventeenth_task.c  seventh.c  sixth_task.c  tenth_task.c  third_task.c  thirteenth_task.c  twelfth_task.c
tasks/: string_.c  string_.h
